sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:3: error: illegal start of simple pattern
  val : lgr = getNombreValeurs()
      ^AlgInsertionSort:4: error: '=' expected but ';' found.
  for (i <- 1 to (lgr - 1) {
^AlgInsertionSort:10: error: ')' expected but '}' found.
} 
^